k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: jbnu-pms
spec:
  selector:
    app: jbnu-pms-app
  ports:
    - port: 80
      targetPort: 8080
